Refactor product management: enhance image handling, update product creation logic, and remove unused variant service